selfhost/test/typechecker/if_error_mismatch_bindingdecl.3.out
Error at %FILE_NAME%:1:14
Type mismatch
  |  val a: Int = if true 1 else None
                  ^
Expected: Int
but instead found: Int?
